--- a/GestionTache/CMakeLists.txt
+++ b/GestionTache/CMakeLists.txt
@@ -12,11 +12,16 @@ qt_add_executable(appGestionTache
     main.cpp
 )
 
+set_source_files_properties(TaskStorage.qml
+    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)
+
 qt_add_qml_module(appGestionTache
     URI GestionTache
     VERSION 1.0
     QML_FILES
         Main.qml
+        QML_FILES tasklist.js
+        QML_FILES TaskStorage.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
