Add custom button

--- a/GestionTache/CMakeLists.txt
+++ b/GestionTache/CMakeLists.txt
@@ -24,6 +24,7 @@ qt_add_qml_module(appGestionTache
         QML_FILES TaskStorage.qml
         QML_FILES TaskList.qml
         QML_FILES TaskDisplay.qml
+        QML_FILES CustomButton.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
